--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,12 +170,18 @@ h6 {
     color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
-.header .profile-img img {
-  margin: 15px auto;
-  display: block;
+.header .profile-img {
+  width: 120px; 
   height: 120px;
-  width: 120px;
+  margin: 15px auto;
+}
+
+.header .profile-img img {
+  display: block;
+  height: 100%;
+  width: 100%;
   border: 8px solid color-mix(in srgb, var(--default-color), transparent 85%);
+  object-fit: cover;
 }
 
 .header .logo {
